<resources>
    <string name="app_name">Gift Bug</string>
    <string name="welcome">Welcome to Gift Bug!</string>
    <string name="bienvenido">¡Bienvenido a Gift Bug!</string>
    <string name="opening">The app that helps you choose gifts for your loved ones.</string>
    <string name="languageEng">Please choose a language.</string>
    <string name="languageEsp">Por favor, eliga un idioma.</string>
    <string name="english_langauge">English</string>
    <string name="español_langauge">español</string>
    <string name="get_started">Get Started</string>
    <string name="next">NEXT</string>
    <string name="person">Please take a moment and think of the person that you are shopping for. Then click the NEXT below.</string>
    <string name="gender_age">Is the person you that you are shopping for a man, woman, boy or girl?</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="how_old">How old is this person?</string>
    <string name="enter_age">(Please enter an age below.)</string>
    <string name="warning_text">Please enter a valid age.</string>
    <string name="sample_age">26</string>
    <string name="coffee_tea">Does he or she drink coffee, tea, or neither?</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="both">Both</string>
    <string name="neither">Neither</string>
    <string name="soda_juice">Does he or she drink soda, juice, or neither?</string>
    <string name="soda">Soda</string>
    <string name="juice">Juice</string>
    <string name="outdoors_indoors">Does he or she prefer the outdoors or the indoors?</string>
    <string name="outdoors">Outdoors</string>
    <string name="indoors">Indoors</string>
    <string name="collar_no_collar">Does he or she prefer usually wear a shirt with a collar or a shirt with no collar?</string>
    <string name="collar">A Collar</string>
    <string name="no_collar">No Collar</string>
    <string name="burger_fine">Does he or she usually prefer burgers and fries or fine dining?</string>
    <string name="burger">Burgers</string>
    <string name="fine">Fine Dinning</string>
    <string name="mcdonalds_chuck">Does he or she usually prefer McDonalds or Chuck E. Cheese\'s?</string>
    <string name="mcdonalds">McDonalds</string>
    <string name="chucky">Chuck E. Cheese\'s</string>
    <string name="results">GiftBug Results</string>
    <string name="results_text">Here are the items we think he or she will love. (Clicking on an item will take you directly to the item\'s amazon page.)</string>

    <!--Thinking about doing a bilingual version-->

    <string name="choose_language">Please choose a language.</string>
    <string name="choose_lang_esp">Por favor, eliga un indioma.</string>
    <string name="english">English</string>
    <string name="espanol">Español</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
