<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.CoffeeTea">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/coffee_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/coffee_tea"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_margin="@dimen/margin"/>

        <LinearLayout
            android:id="@+id/buttonLinearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

        <Button
            android:id="@+id/coffee_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:layout_margin="@dimen/margin"/>

        <Button
            android:id="@+id/tea_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tea"
            android:layout_margin="@dimen/margin"/>
     </LinearLayout>

        <Button
            android:id="@+id/neither_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLinearLayout1"
            android:layout_centerInParent="true"
            android:text="@string/neither"
            android:layout_margin="@dimen/margin"/>

    </RelativeLayout>

</FrameLayout>
