<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBackgroundColor"
    tools:context="layout.ManWomanBoyGirl">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/person_gender_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayoutUpper"
            android:layout_margin="@dimen/margin"
            android:text="@string/gender_age"
            android:textAppearance="?android:textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/linearLayoutUpper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/man_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/man" />

            <Button
                android:id="@+id/woman_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/woman" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutUpper"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/boy" />

            <Button
                android:id="@+id/girl_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/girl" />

        </LinearLayout>

        <ImageView
            android:id="@+id/bug_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutLower"
            android:layout_centerInParent="true"
            android:src="@drawable/gift_bug_logo_clear" />


    </RelativeLayout>

</FrameLayout>
