<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBackgroundColor"
    tools:context="layout.HowOld">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/how_old_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/enter_age_text"
            android:layout_centerHorizontal="true"
            android:text="@string/how_old"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/enter_age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edit_age"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin"
            android:text="@string/enter_age"
            android:textAppearance="?android:textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margin"
            android:inputType="number"
            android:hint="@string/sample_age" />

        <Button
            android:id="@+id/next2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_age"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin"
            android:text="@string/next" />

        <TextView
            android:id="@+id/warning_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/next2"
            android:text=""
            android:textAppearance="?android:textAppearanceLarge"/>


    </RelativeLayout>

</FrameLayout>
