<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBackgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geogehigbie.giftbug.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="5dp"
                android:text="@string/welcome"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chooseLangaugeEng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeText"
                android:layout_centerInParent="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="15dp"
                android:text="@string/choose_language"
                android:textAppearance="?android:textAppearanceLarge"
                />


            <TextView
                android:id="@+id/welcomeTextEsp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseLangaugeEng"
                android:layout_centerInParent="true"
                android:layout_Top="@dimen/margin"
                android:text="@string/bienvenido"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/chooseLangaugeEsp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeTextEsp"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/choose_lang_esp"
                android:textAppearance="?android:textAppearanceLarge" />


            <LinearLayout
                android:id="@+id/linearLayoutMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chooseLangaugeEsp"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/english_langauge" />

                <Button
                    android:id="@+id/español"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/español_langauge" />

            </LinearLayout>

            <ImageView
                android:id="@+id/bug_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutMain"
                android:layout_centerInParent="true"
                android:src="@drawable/gift_bug_logo_clear"/>

        </RelativeLayout>


    </FrameLayout>

</RelativeLayout>
