<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="layout.OutdoorsIndoors">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/outdoors_indoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonLinearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin"
            android:text="@string/outdoors_indoors"
            android:textAppearance="?android:textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/buttonLinearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/outdoors_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/outdoors" />

            <Button
                android:id="@+id/indoors_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/indoors" />
        </LinearLayout>



    </RelativeLayout>

</FrameLayout>
