<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBackgroundColor"
    tools:context="layout.BurgersOrFine">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/burgers_fine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonLinearLayout4"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin"
            android:text="@string/burger_fine"
            android:textAppearance="?android:textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/buttonLinearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/burger_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/burger" />

            <Button
                android:id="@+id/fine_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/fine" />
        </LinearLayout>

        <ImageView
            android:id="@+id/bug_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLinearLayout4"
            android:layout_centerInParent="true"
            android:src="@drawable/gift_bug_logo_clear"/>



    </RelativeLayout>

</FrameLayout>
