<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBackgroundColor"
    tools:context="layout.CollarNoCollar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/collar_no_collar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonLinearLayout3"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin"
            android:text="@string/collar_no_collar"
            android:textAppearance="?android:textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/buttonLinearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/collar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/collar" />

            <Button
                android:id="@+id/no_collar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/no_collar" />
        </LinearLayout>

        <ImageView
            android:id="@+id/bug_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLinearLayout3"
            android:layout_centerInParent="true"
            android:src="@drawable/gift_bug_logo_clear" />


    </RelativeLayout>

</FrameLayout>
